fix #43699: Web Requests, Account text not visible with Dark theme

--- a/Teleopti.Ccc.Web/Teleopti.Ccc.Web/WFM/css/_requests.scss
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.Web/WFM/css/_requests.scss
@@ -354,8 +354,7 @@
 
         .arrow-box {
             position: relative;
-            background: $teal-100;
-            border: 1px solid #000000;
+            background: $teal-300;
             padding-left: 3px;
             margin-right: 12px;
             padding-right: 3px;
